update some style

--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,7 @@ h2 {
 
 .list {
   list-style-type: none;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
   padding: 1rem;
 }
 
@@ -87,7 +87,7 @@ input[type="submit"] {
   flex-direction: column;
   width: 60%;
   padding: 16px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
 }
 
 .add-form li {
